<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:custom="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/top"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/white"
        android:theme="@style/ThemeOverlay.AppCompat.Light"
        tools:ignore="MissingConstraints"/>

    <!-- Note: A RecyclerView can also be used -->

    <prs.sudokuSolver.SudokuBoard
        android:id="@+id/sudokuBoard"
        custom:boardColor="#000000"
        custom:layout_constraintEnd_toEndOf="parent"
        custom:layout_constraintStart_toStartOf="parent"
        custom:layout_constraintTop_toBottomOf="@+id/top"
        custom:cellFillColor="#2d95d366"
        custom:cellHighlightCollor="#2d95d333"
        custom:letterColor="?android:textColorPrimary"
        custom:letterColorSolve="?android:colorPrimary"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:ignore="NotSibling">
    </prs.sudokuSolver.SudokuBoard>

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        custom:layout_constraintEnd_toEndOf="parent"
        custom:layout_constraintStart_toStartOf="parent"
        custom:layout_constraintTop_toBottomOf="@+id/sudokuBoard">

        <Button
            android:id="@+id/button1"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:backgroundTint="#00000000"
            android:onClick="BTNOnePress"
            android:padding="0dp"
            android:text="@string/_1"
            android:textColor="?android:textColorPrimary"
            android:textSize="24sp" />

        <Button
            android:id="@+id/button2"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="BTNTwoPress"
            android:padding="0dp"
            android:text="@string/_2"
            android:textColor="?android:textColorPrimary"
            android:textSize="24sp" />

        <Button
            android:id="@+id/button3"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="BTNThreePress"
            android:padding="0dp"
            android:text="@string/_3"
            android:textColor="?android:textColorPrimary"
            android:textSize="24sp" />

        <Button
            android:id="@+id/button4"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="BTNFourPress"
            android:padding="0dp"
            android:text="@string/_4"
            android:textColor="?android:textColorPrimary"
            android:textSize="24sp" />

        <Button
            android:id="@+id/button5"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="BTNFivePress"
            android:padding="0dp"
            android:text="@string/_5"
            android:textColor="?android:textColorPrimary"
            android:textSize="24sp" />

        <Button
            android:id="@+id/button6"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="BTNSixPress"
            android:padding="0dp"
            android:text="@string/_6"
            android:textColor="?android:textColorPrimary"
            android:textSize="24sp" />

        <Button
            android:id="@+id/button7"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="BTNSevenPress"
            android:padding="0dp"
            android:text="@string/_7"
            android:textColor="?android:textColorPrimary"
            android:textSize="24sp" />


        <Button
            android:id="@+id/button8"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="BTNEightPress"
            android:padding="0dp"
            android:text="@string/_8"
            android:textColor="?android:textColorPrimary"
            android:textSize="24sp" />

        <Button
            android:id="@+id/button9"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="BTNNinePress"
            android:padding="0dp"
            android:text="@string/_9"
            android:textColor="?android:textColorPrimary"
            android:textSize="24sp" />
    </LinearLayout>

    <Button
        android:id="@+id/solveButton"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:textSize="20sp"
        android:textColor="@color/white"
        android:onClick="solve"
        android:text="@string/solve"
        android:background="@drawable/solve_btn"
        custom:layout_constraintEnd_toEndOf="parent"
        custom:layout_constraintStart_toStartOf="parent"
        custom:layout_constraintTop_toBottomOf="@+id/linearLayout" />

</androidx.constraintlayout.widget.ConstraintLayout>